--- a/githubProject.css
+++ b/githubProject.css
@@ -1,116 +1,79 @@
-body{
+body , body #fork{
 	display: flex;
 }
-#fork{
+body #fork img{
 	display:flex;
-	justify-content:flex-start;
-}
-#fork img{
-	display:flex;
-	justify-content:flex-start;
 	width: 100%;
 	height:10%;
-
 }
-
 .container{
 	display: flex;
 	flex-direction: column;
 	margin-left:10%;
 	margin-right:10%;
-		width:100%;
+	width:100%;
 	height:100%;
 }
-
-.x{
+.container #octocat-container{
+	display:flex;	
+	width:100%;
+	height:100%;
+}
+.container #octocat-container .badge{
 	display:flex;
 	flex-direction: column;
 	justify-content:center;
 	width:100%;
 	height:100%;
 }
-
-.x h1{
+.container #octocat-container .badge h1{
 	display: flex;
 	font-style: oblique;
 	flex-direction: column;
 	width:100%;
 	height:100%;
-
 }
-
-.x img{
+.container #octocat-container .badge img{
 	display: flex;
 }
-
-
-
-
-#octocat{
-	display:flex;
-	justify-content: flex-start;
-	flex-direction: row;
-	
-	width:100%;
-	height:100%;
-
-}
-
-#octocat-logo {
+.container #octocat-logo {
 	display: flex;
 	flex-wrap: nowrap;
 	justify-content: flex-end;
 	width:100%;
 	height:100%;
-
 }
-
-#octocat-logo img, #preview iframe{
+.container #octocat-logo img, #preview iframe{
 	display: flex;
 	flex-wrap: wrap;
 	width: 100%;
 	height: 100%;
 }
- #preview iframe{
+ .container #preview iframe{
  	width: 50%;
  	height: 50%;
  }
-
-
-#search{
-	background: rgb(243, 202, 177);
-    background: -moz-linear-gradient(left bottom, rgba(243, 202, 177, .89), rgba(241, 206, 184, .46));
-    background: -webkit-linear-gradient(left bottom, rgba(243, 202, 177, .89), rgba(241, 206, 184, .46));
-    background: -o-linear-gradient(left bottom, rgba(243, 202, 177, .89), rgba(241, 206, 184, .46));
-    background: -ms-linear-gradient(left bottom, rgba(243, 202, 177, .89), rgba(241, 206, 184, .46));
-    background: linear-gradient(left bottom, rgba(243, 202, 177, .89), rgba(241, 206, 184, .46));
+.container #search{
+	background: rgb(230, 185, 210);
     border-radius: 0 0 10px 10px;
     display: flex;
     justify-content: center;
     flex-direction:column;
     padding: 20px 20px 10px 20px;
-
 }
-#checkbox-container{
+.container #checkbox-container, #info p{
 	display: flex;
-	flex-direction: row;
 }
-
-#info{
+.container #info{
 	display:flex;
 	padding:5%;
 }
-#info div{
+.container #info div{
 	display:flex;
 	flex-direction:column;
 	width:100%
 }
-#info h2{
+.container #info h2{
 	display:flex;
 	justify-content:center;
-}
-#info p{
-	display:flex;
-	justify-content:flex-start;
-
 }
